fix overflow of pre elements

--- a/src/style.styl
+++ b/src/style.styl
@@ -8,6 +8,8 @@ body
 body
   margin 0
   min-width 500px
+  width 100%
+  max-width 100%
 
   font-family var(--fontFamily)
   font-size var(--sizeBase)
